testData/highlighting/functionalElement.conf
filter {
    if "string" in [field] {<error descr="Logstash token type.IDENTIFIER, Logstash token type.if or Logstash token type.} expected, got 'grok'"> </error>
        grok {
            match => { "message" => [%{TIMESTAMP_ISO8601:date}] %{GREEDYDATA:trash}: { %{WORD}%{GREEDYDATA:core_message}"}
        }
    } else if [field] == "string" and [field] == 1 {
        drop {}
    } else if [field] =~  {
        drop {}
    }
}